2011-08-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: yet more use of TAP, and related extensions
	* tests/defs (show_): New function, display the contents of one or
	more files on stdout, with bells & whistles (both for cosmetic and
	practical reasons, the latter aimed at avoiding spurious TAP
	diagnostic).
	(AUTOMAKE_run): Extend and adapt to make it compatible with TAP
	based tests.  Since we are at it, make its implementation more
	namespace-safe, and improve its command-line interface.
	(AUTOMAKE_fails): Adapt to the new command-line interface of
	`AUTOMAKE_run'.
	* tests/add-missing.test: Renamed ...
	* tests/add-missing.tap: ... to this, and converted to the use
	of the TAP protocol, and of the new `show_' function.
	* tests/automake.test: Renamed ...
	* tests/automake-cmdline.tap: ... to this, and converted to the
	use of the TAP protocol.
	* tests/getopt.test:  Adapt to the new command-line interface
	of `AUTOMAKE_run'.
	* tests/cond44.test: Likewise.
	* tests/cond45.test: Likewise.
	* tests/configure.test: Likewise.
	* tests/license2.test: Likewise.
	* tests/parallel-am.test: Likewise.
	* tests/parallel-am3.test: Likewise.
	* tests/tags2.test: Likewise.
	* tests/werror3.test: Likewise.
	* tests/werror4.test: Likewise.
	* tests/amopts-variable-expansion.test: Likewise.
	* tests/warnings-win-over-strictness.test: Likewise.
	* tests/Makefile.am (TESTS): Update.
	(TAP_LOG_DRIVER_FLAGS): Add `--merge', so that TAP diagnostic is
	reported in the testsuite progress output.

2011-08-03  Stefano Lattarini  <stefano.lattarini@gmail.com>

	maintcheck: fix more maintainer-check failures
	* tests/test-driver-custom-no-html.test (no-rst): Use `EOF',
	not `EoL', as the here-document delimiter.
	* tests/test-trs-basic.test: Use `cat + here-doc' rather
	than `echo' when creating the dummy test scripts, to please
	maintainer-check.
	* tests/test-trs-recover.test: Use creative quoting where
	needed, to please maintainer-check.