@@ -35,8 +35,8 @@ TESTS = foo.chk bar.test baz bla.t bli.suff sub/test
 
 TEST_EXTENSIONS = .chk .test .t
 
-CHK_LOG_COMPILER = CHK=ok; export CHK; ./chk-driver
-TEST_LOG_COMPILER = CHK=ok $(SHELL) $(srcdir)/test-driver
+CHK_LOG_COMPILER = ./chk-driver
+TEST_LOG_COMPILER = $(SHELL) $(srcdir)/test-driver
 T_LOG_COMPILER = @acsubst_driver@
 LOG_COMPILER = @SHELL@ -x $(srcdir)/noext-driver
 
@@ -55,18 +55,12 @@ LOG_FLAGS = -b
 EXTRA_DIST = $(TESTS) chk-driver test-driver noext-driver
 END
 
-unset CHK || :
-
 mkdir sub
 
 cat > chk-driver <<'END'
 #! /bin/sh
 test x"$1" = x"--chk" || {
   echo "$0: invalid command line: $*" >&2
-  exit 1
-}
-test x"$CHK" = x"ok" || {
-  echo "$0: bad \$CHK value '$CHK'" >&2
   exit 1
 }
 shift
@@ -82,10 +76,6 @@ cat > bin/t-driver <<'END'
 #! /bin/sh
 if test x"$1,$2" != x"--am-t,--t"; then
   echo "$0: invalid command line: $*" >&2
-  exit 1
-fi
-if test x${CHK+"set"} = x"set"; then
-  echo "$0: $CHK is set in the environment" >&2
   exit 1
 fi
 shift; shift
