@@ -1,5 +1,12 @@
 2011-08-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	testsuite: fix a spurious failure
+	* tests/parallel-tests-ext-driver.test: Exporting of environment
+	variables directly from $(LOG_COMPILER) variables is not allowed
+	anymore.  Adjust to this.
+
+2011-08-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	testsuite: yet more use of TAP, and related extensions
 	* tests/defs (show_): New function, display the contents of one or
 	more files on stdout, with bells & whistles (both for cosmetic and
